--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,3 +4,6 @@ spring.datasource.username=root
 spring.datasource.password=Ckk041994
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
 #server.port=8081
+
+rsa.private-key=classpath:certs/private.pem
+rsa.public-key=classpath:certs/public.pem
