--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,9 +1,15 @@
 #spring.jpa.hibernate.ddl-auto=update
 spring.datasource.url=jdbc:mysql://localhost:3306/hotel_mgnt_sys?useSSL=false
 spring.datasource.username=root
-spring.datasource.password=Ckk041994
+spring.datasource.password=password
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
 #server.port=8081
+spring.mail.host=smtp.gmail.com
+spring.mail.port=587
+spring.mail.username=wintnandar.wnl@gmail.com
+spring.mail.password=scldpssweyiwmckm
+spring.mail.properties.mail.smtp.auth=true
+spring.mail.properties.mail.smtp.starttls.enable=true
 
 rsa.private-key=classpath:certs/private.pem
 rsa.public-key=classpath:certs/public.pem
