--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -10,6 +10,6 @@ spring.mail.username=wintnandar.wnl@gmail.com
 spring.mail.password=scldpssweyiwmckm
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
-
+#test
 rsa.private-key=classpath:certs/private.pem
 rsa.public-key=classpath:certs/public.pem
