--- a/pom.xml
+++ b/pom.xml
@@ -21,11 +21,11 @@
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-data-jpa</artifactId>
 		</dependency>
-		<dependency>
-		    <groupId>org.springframework.boot</groupId>
-		    <artifactId>spring-boot-starter-security</artifactId>
-		    <!--<version>3.1.4</version>-->
-		</dependency>
+<!--		<dependency>-->
+<!--		    <groupId>org.springframework.boot</groupId>-->
+<!--		    <artifactId>spring-boot-starter-security</artifactId>-->
+<!--		    &lt;!&ndash;<version>3.1.4</version>&ndash;&gt;-->
+<!--		</dependency>-->
 
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
@@ -48,30 +48,30 @@
 		    <artifactId>spring-boot-configuration-processor</artifactId>
 		    <!--<version>3.1.4</version>-->
 		</dependency>
-		<dependency>
-		    <groupId>org.springframework.security</groupId>
-		    <artifactId>spring-security-oauth2-resource-server</artifactId>
-		    <!--<version>6.1.4</version>-->
-		</dependency>
-		<dependency>
-			<groupId>org.springframework.security.oauth</groupId>
-			<artifactId>spring-security-oauth2</artifactId>
-			<version>2.0.3.RELEASE</version>
-		</dependency>
-		<dependency>
-		    <groupId>org.springframework.security</groupId>
-		    <artifactId>spring-security-jwt</artifactId>
-		    <version>1.1.1.RELEASE</version>
-		</dependency>
-		<dependency>
-            <groupId>org.springframework.security</groupId>
-            <artifactId>spring-security-oauth2-jose</artifactId>
-            <version>6.1.0</version>
-        </dependency>
-        <dependency>    
-			<groupId>org.springframework.security</groupId>   
-        	<artifactId>spring-security-oauth2-client</artifactId>
-        </dependency>
+<!--		<dependency>-->
+<!--		    <groupId>org.springframework.security</groupId>-->
+<!--		    <artifactId>spring-security-oauth2-resource-server</artifactId>-->
+<!--		    &lt;!&ndash;<version>6.1.4</version>&ndash;&gt;-->
+<!--		</dependency>-->
+<!--		<dependency>-->
+<!--			<groupId>org.springframework.security.oauth</groupId>-->
+<!--			<artifactId>spring-security-oauth2</artifactId>-->
+<!--			<version>2.0.3.RELEASE</version>-->
+<!--		</dependency>-->
+<!--		<dependency>-->
+<!--		    <groupId>org.springframework.security</groupId>-->
+<!--		    <artifactId>spring-security-jwt</artifactId>-->
+<!--		    <version>1.1.1.RELEASE</version>-->
+<!--		</dependency>-->
+<!--		<dependency>-->
+<!--            <groupId>org.springframework.security</groupId>-->
+<!--            <artifactId>spring-security-oauth2-jose</artifactId>-->
+<!--            <version>6.1.0</version>-->
+<!--        </dependency>-->
+<!--        <dependency>    -->
+<!--			<groupId>org.springframework.security</groupId>   -->
+<!--        	<artifactId>spring-security-oauth2-client</artifactId>-->
+<!--        </dependency>-->
         <dependency>
 	        <groupId>org.springframework.boot</groupId>
 	        <artifactId>spring-boot-starter-mail</artifactId>
