--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-#spring.jpa.hibernate.ddl-auto=update
+spring.jpa.hibernate.ddl-auto=update
 spring.datasource.url=jdbc:mysql://localhost:3306/hotel_mgnt_sys?useSSL=false
 spring.datasource.username=root
 spring.datasource.password=password
@@ -11,5 +11,5 @@ spring.mail.password=scldpssweyiwmckm
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
 #test
-rsa.private-key=classpath:certs/private.pem
-rsa.public-key=classpath:certs/public.pem
+#rsa.private-key=classpath:certs/private.pem
+#rsa.public-key=classpath:certs/public.pem
